# U-E-F-I

./: .gitignore  .gitmodules  Anti_Cheat_Evasion_Plan_V5.md  README.md  SECURITY_FIXES_PLAN_V4.md  add_colors.py  build-all.bat  build-detector.bat  enhance_ui.py  fix_encoding.py  fix_layout.py  fix_mac_ending.py  fix_translation_hpp.py  fix_visuals_gap.py  hyper-reV.sln  load-hyper-reV.bat  loader.cpp  loader.vcxproj  out.txt  patch_aim_col1.py  patch_menu.py  patch_theme.py  uefi-boot.efi
Game-2/: PubgExt.sln
Mova/: overlay.cpp  overlay.h
PUBG-2/: GEMINI.md  MenuConfigKakaDma.json  Offset_pubg.txt  PAOD_PUBG2_MAPPING.md  build_debug.bat  build_debug_pubg.bat  build_force.bat  build_overlay.bat  build_pubg.bat  build_release_pubg.bat  build_securityhealthservice.bat  gamebaseRael.txt  main.cpp.bak  phao_final.sln  protector.hpp.bak
ProjectX/: ProjectX.vcxproj  main.cpp
Spoofer/: spoofer.sys
UnifiedTelemetryNode/: .gitignore  GZ-Loader-Account-API.postman_collection.json  LOADER_ACCOUNT_INTEGRATION.md  MenuConfigKakaDma.json  Offset_telemetry.txt  PUBLIC_API_DOC.md  SECURITY_UPGRADE.md  build_debug_telemetry.bat  build_mouse_test.bat  build_release_telemetry.bat  gamebaseRael.txt  mouse_test.cpp  phao_final.sln  script.py  strip_telemetry_signature.ps1
UnifiedTelemetryNode/tools/physx_audit_harness/: CMakeLists.txt  README.md  main.cpp  physx_audit_harness.cpp  physx_audit_harness.hpp
Valorant/: .gitignore  GZ-Valorant.sln  generate_headers.py
Vdata/: Vdata.vcxproj  Vdata.vcxproj.filters  build_test.bat  main.cpp  offsets.txt  vdata.txt
offset_scanner/siglab_cpp/: CMakeLists.txt  README.md  build.bat  extract_uworld.json
offset_scanner/siglab_cpp/rules/: DecryptNameIndexXorKey1.json  DecryptNameIndexXorKey2.json  DecryptNameIndexXorKey3.json  GNames.json  PhysxSDK.json  UWorld.json  XenuineDecrypt.json  example_rule.json
offset_scanner/siglab_cpp/src/: main.cpp  pe_image.cpp  pe_image.h  signature.cpp  signature.h
plan/: plan.md  (+2 more)
(+643 files in other folders)
